--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.1",
     "mysql2": "^3.5.2",
     "sequelize": "^6.32.1"
   }
